<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitMAP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User</string>
    <string name="account_activity_title">Account</string>
    <string name="term_of_use">Term of Use</string>
    <string name="log_out">Log Out</string>
    <string name="dialog_termofuse">Term of Use...</string>
    <string name="hide">hide</string>
    <string name="title_activity_nearby_drink">NearbyDrinkActivity</string>
    <string name="daily_run">Daily Run</string>
    <string name="exercise_track">Exercise Track</string>
    <string name="nearby_drink">Nearby Drink</string>
    <string name="account">Account</string>
    <string name="title_activity_exercise_track">ExerciseTrackActivity</string>
    <string name="title_activity_new_run">NewRunActivity</string>
    <string name="title_activity_add_new_run_item">AddNewRunItem</string>
    <string name="title_activity_single_place">SinglePlaceActivity</string>
    <string name="start_point">Start Address</string>
    <string name="end_point">End Address</string>
    <string name="start_time">Start Time</string>
    <string name="alarm">Alarm</string>
    <string name="choose_time">Select Time</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="slash">/</string>
    <string name="colon">:</string>
    <string name="dd">dd</string>
    <string name="mm">mm</string>
    <string name="yy">yyyy</string>
    <string name="hh">hh</string>
    <string name="map">map</string>
    <string name="login1">LOGIN</string>
    <string name="login2">LOG IN</string>
    <string name="foregt_password">Forgot Password?</string>
    <string name="calorie">Calorie</string>
    <string name="distance">Distance</string>
    <string name="start">Start</string>
    <string name="pause">pause</string>
    <string name="title_activity_new_run_result">NewRunResult</string>
    <string name="stop">stop</string>
    <string name="pref_title_weight">Weight(lbs)</string>
    <string name="pref_default_weight">0</string>
    <string name="app_id">607587132695437</string>
    <string name="google_api_key">AIzaSyCybxpAQ1Kiph9mTUsWxyhexpfibzIgw9A</string>
    <string name="share">share</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="title_activity_fit_bit">FitBitActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="register">Sign Up</string>
    <string name="weight">Weight(lbs)</string>
    <string name="reset">Reset</string>
    <string name="signUp">SIGN UP</string>
</resources>
