<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context="com.fitmap.activites.SignUpActivity">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/run_logo"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#372c24"
            android:textSize="25sp"
            android:textStyle="italic|bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@id/logo"
        android:orientation="vertical" >
        <!--user name -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="#372c24"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/signup_userName"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="6dip"
            android:background="@anim/gradient_bg"
            android:singleLine="true" />
        <!-- Password -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#372c24"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="6dip"
            android:background="@anim/gradient_bg"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="#372c24"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/signup_weight"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="6dip"
            android:background="@anim/gradient_bg"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@anim/custom_button"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="validate"/>

        <Button
            android:text="@string/reset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@anim/custom_button"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="reset"/>

    </LinearLayout>
</RelativeLayout>
